<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputText"
        android:layout_width="324dp"
        android:layout_height="206dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/inputTipView"
        android:layout_width="239dp"
        android:layout_height="28dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="126dp"
        android:text="@string/input_tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="412dp"
        android:text="@string/action_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/countingTypeSpinner"
        android:layout_width="173dp"
        android:layout_height="32dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="70dp"
        android:entries="@array/counting_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/outputView"
        android:layout_width="156dp"
        android:layout_height="28dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="500dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>